@@ -362,6 +362,9 @@ Release 2.7.0 - 2015-04-20
 
   BUG FIXES
 
+    YARN-3675. FairScheduler: RM quits when node removal races with
+    continuous-scheduling on the same node. (Anubhav Dhoot via kasha)
+
     YARN-3071. Remove invalid char from sample conf in doc of FairScheduler.
     (Masatake Iwasaki via aajisaka)
 
